Update irrelevant title

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <img src="tempImgCV/profileCV.png" alt="profile">
         </div>
         <div class="brief">
-            <em> Kobi Alen, <br> Computer Science student- 3rd Year </em>
+            <em> Kobi Alen, <br> Software Developer </em>
         </div>
     </div>
     <div class="navi">
@@ -38,10 +38,10 @@
         <h2>About Me</h2>
         <div> 
             My name is Kobi Alen,<br><br>
-            25 years old,<br>
+            26 years old,<br>
             I have a passion for technology and computers, and i wish to grow and develop myself in these areas.<br><br>
             I see myself as a very friendly person, a dedicated worker and I always strive for success.<br><br>
-            My Strengths include OOP skills, Hands on experience with C# programing in prior jobs, <br>Hands on experience with SQL Server and strong analytical skills.
+            My Strengths include OOP skills, Hands on experience with .NET Framework/Core development, <br>Hands on experience with SQL Server strong analytical skills and more.
         </div>
     </div>
     <div class="projects">
